feat: add pipe for img url

--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -2,7 +2,7 @@
 <div class="profile-card">
   <div class="avatar-name">
     <img
-      src="assets/images/img.png"
+      [src]="profile.avatarUrl | imgUrl"
       alt="avatar"
       class="profile-card__avatar"
     />
