--- a/src/app/common-ui/profile-card/profile-card.component.scss
+++ b/src/app/common-ui/profile-card/profile-card.component.scss
@@ -13,7 +13,7 @@
 .profile-card__avatar {
   width: 70px;
   height: 70px;
-  background-repeat: 50%;
+  border-radius: 50%;
   overflow: hidden;
 }
 .profile-card__name {
