--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,10 @@
 @import "fonts";
+@import "margins";
 :root {
   --dark-color: #000000;
   --light-color: #fff;
   --primary-color: #ae7aff;
+  --grey-color: #5f646d;
 }
 
 *,
@@ -16,6 +18,8 @@ body {
   font-family: "JetBrains Mono", sans-serif;
   background-color: var(--dark-color);
   color: var(--light-color);
+  background-image: url(/assets/images/background.jpg);
+  background-size: cover;
 }
 .skill-tag {
   border: 1px solid var(--light-color);
@@ -28,13 +32,36 @@ body {
   height: 24px;
 }
 .btn {
+  width: 100%;
   background-color: var(--primary-color);
-  border: none;
+  border: 1px solid var(--dark-color);
+  border-radius: 4px;
   color: var(--dark-color);
   padding: 10px 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
+  cursor: pointer;
+}
+.btn-shadow {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    right: -4px;
+    background: var(--grey-color);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 4px;
+  }
+}
+h1 {
+  font-size: 48px;
+  line-height: 56px;
+  font-weight: 800;
 }
 .h6 {
   font-size: 18px;
@@ -45,4 +72,24 @@ body {
   font-size: 12px;
   line-height: 21px;
   font-weight: 400;
+}
+.tt-controllabel {
+  display: block;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+}
+.tt-input {
+  width: 100%;
+  margin-top: 8px;
+  display: block;
+  border: 1px solid var(--light-color);
+  border-radius: 4px;
+  padding: 12px 20px;
+  background: var(--dark-color);
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  color: var(--light-color);
+  font-family: "JetBrains Mono", sans-serif;
 }
