--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,15 +1,25 @@
-<form action="" class="login-form">
+<form class="login-form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <h1 class="h1 mb60">Вход</h1>
   <label class="tt-controllabel mb16">
     Telegram username
-    <input type="text" placeholder="Введите логин" class="tt-input" />
+    <input
+      formControlName="username"
+      type="text"
+      placeholder="Введите логин"
+      class="tt-input"
+    />
   </label>
 
   <label class="tt-controllabel mb32">
     Пароль
-    <input type="text" placeholder="Введите пароль" class="tt-input" />
+    <input
+      formControlName="password"
+      type="text"
+      placeholder="Введите пароль"
+      class="tt-input"
+    />
   </label>
-  <button class="btn btn-shadow">Войти</button>
+  <button class="btn btn-shadow" type="submit">Войти</button>
 </form>
 
 <img src="/assets/svg/logo-big.svg" alt="logo" />
